maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
override def run() {numerotation()
^JediEscaper:2: error: expected start of definition
override def run() {numerotation()
         ^JediEscaper:6: error: expected class or object definition
def numerotation(){
^